pkg/deps/testdata/ub/project/invalid/unobin-required.ub
project: {
  requires: {
    'github.com/cloudboss/unobin': {
      version: 'v0.5.0'
    }
  }
}
